--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
-title: TCG Rio Preto
-email: your-email@example.com
+title: TCG Rio Preto e Região
+email: contato@johnywalves.com.br
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Coleção de informações sobre eventos e locais de suporte da comunidade TCG
+  em São José do Rio Preto e Região
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+url: tcgrp.com.br
+github_username: johnywalves
 
 # Config
 future: true
 permalink: /:title.html
+timezone: America/Sao_Paulo
 
 # Build settings
 plugins:
