:bento: adição de ícones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["endfor", "github", "johnywalves", "tcgrp"]
+  "cSpell.words": ["digimon", "endfor", "github", "johnywalves", "tcgrp"]
 }
