:sparkles: adicionar assinatura e separador de semanas

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: TCG Rio Preto e Região
 email: contato@johnywalves.com.br
 description: >-
-  Coleção de informações sobre eventos e locais de suporte da comunidade TCG
-  em São José do Rio Preto e Região
+  Coleção de informações sobre eventos e locais de suporte da 
+  comunidade Trading Card Game (TCG) em São José do Rio Preto
+  e Região
 url: https://tcgrp.com.br
 baseurl: ""
 github_username: johnywalves
