:sparkles: adicionar instagram e website para perfil de lojas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "digimon",
     "endfor",
     "github",
+    "guerreiroffline",
     "gundam",
+    "instagram",
     "johnywalves",
     "tcgrp"
   ]
