:art: formatar código com configurações adicionar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,13 @@
     "instagram",
     "johnywalves",
     "tcgrp"
-  ]
+  ],
+  "files.associations": {
+    "*.html": "liquid",
+    "*.md": "liquid"
+  },
+  "[liquid]": {
+    "editor.defaultFormatter": "Shopify.theme-check-vscode",
+    "editor.formatOnSave": true
+  }
 }
