--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "cSpell.language": "en,pt,pt_BR",
   "cSpell.words": [
     "digimon",
     "endfor",
